# file_tui_study

./: Cargo.toml
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/inputs/: event.rs  key.rs  mod.rs
